--- a/Code/Mobile/TellMe.Mobile.iOS/Views/Cells/StoriesListCell.xib
+++ b/Code/Mobile/TellMe.Mobile.iOS/Views/Cells/StoriesListCell.xib
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
@@ -16,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="465"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cxk-wN-pdQ" id="YTl-1W-gDM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="464.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="464"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9m0-fb-khi">
@@ -95,6 +95,7 @@
                                     <constraint firstAttribute="width" secondItem="dii-Qf-ejU" secondAttribute="height" multiplier="1:1" id="gBm-aU-ebH"/>
                                     <constraint firstAttribute="height" constant="24" id="vLn-e9-6gf"/>
                                 </constraints>
+                                <color key="tintColor" colorSpace="calibratedWhite" white="0.333333333333333" alpha="1"/>
                                 <state key="normal" image="More"/>
                                 <connections>
                                     <action selector="MoreButton_Touched:" destination="cxk-wN-pdQ" eventType="touchUpInside" id="cHG-1T-Zhp"/>
@@ -142,6 +143,7 @@
                 <outlet property="ProfilePicture" destination="2396" id="name-outlet-2396"/>
                 <outlet property="ReceiversCollection" destination="4826" id="name-outlet-4826"/>
                 <outlet property="Title" destination="2399" id="name-outlet-2399"/>
+                <outlet property="MoreButton" destination="dii-Qf-ejU" id="name-outlet-dii-Qf-ejU"/>
             </connections>
             <point key="canvasLocation" x="34.5" y="59.5"/>
         </tableViewCell>
@@ -150,5 +152,27 @@
         <image name="Comment" width="30" height="30"/>
         <image name="Heart" width="30" height="30"/>
         <image name="More" width="30" height="30"/>
+        <image name="Contacts" width="192" height="192"/>
+        <image name="Play" width="64" height="64"/>
+        <image name="UserPic" width="36" height="36"/>
+        <image name="Bell" width="25" height="25"/>
+        <image name="Storytellers" width="25" height="25"/>
+        <image name="Account" width="25" height="25"/>
+        <image name="AddGroup" width="25" height="25"/>
+        <image name="Send" width="30" height="30"/>
+        <image name="Replay" width="64" height="64"/>
+        <image name="Heart-O" width="30" height="30"/>
+        <image name="Calendar" width="25" height="25"/>
+        <image name="Playlists" width="25" height="25"/>
+        <image name="Playlist" width="50" height="50"/>
+        <image name="Next" width="50" height="50"/>
+        <image name="Prev" width="50" height="50"/>
+        <image name="Burger" width="25" height="25"/>
+        <image name="Record" width="25" height="25"/>
+        <image name="Request" width="25" height="25"/>
+        <image name="NoEvents" width="350" height="129.5"/>
+        <image name="NoStorytellers" width="350" height="129.5"/>
+        <image name="NoPlaylists" width="350" height="129.5"/>
+        <image name="NoStories" width="350" height="129.5"/>
     </resources>
 </document>
