--- a/Code/Mobile/TellMe.Mobile.iOS/Views/Cells/StoryViewCell.xib
+++ b/Code/Mobile/TellMe.Mobile.iOS/Views/Cells/StoryViewCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
@@ -110,6 +110,16 @@
                             <action selector="MoreButton_Touched:" destination="cxk-wN-pdQ" eventType="touchUpInside" id="2ys-yl-aWA"/>
                         </connections>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You have flagged this story as objectionable" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" id="24058" translatesAutoresizingMaskIntoConstraints="NO" numberOfLines="2" adjustsFontForContentSizeCategory="YES" minimumScaleFactor="0.5">
+                        <rect key="frame" x="38" y="278" width="300" height="60"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="25" weight="medium"/>
+                        <color key="textColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
+                        <nil key="highlightedColor"/>
+                        <constraints>
+                            <constraint id="25201" firstAttribute="height" constant="60"/>
+                            <constraint id="25202" firstAttribute="width" constant="300"/>
+                        </constraints>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="1098" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="top" constant="10" id="1101"/>
@@ -140,18 +150,21 @@
                     <constraint firstItem="Asx-Z9-y1U" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1856" secondAttribute="trailing" constant="10" id="gfg-2V-xq6"/>
                     <constraint firstItem="cca-vO-SKB" firstAttribute="top" secondItem="1366" secondAttribute="bottom" id="uYF-mL-hOO"/>
                     <constraint firstItem="cca-vO-SKB" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading" id="yUH-n7-ryo"/>
+                    <constraint id="25200" firstItem="24058" firstAttribute="centerX" secondItem="1366" secondAttribute="centerX"/>
+                    <constraint id="25203" firstItem="1366" firstAttribute="centerY" secondItem="24058" secondAttribute="centerY" constant="2"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
                 <outlet property="LikeButton" destination="19098" id="name-outlet-19098"/>
+                <outlet property="MoreButton" destination="Asx-Z9-y1U" id="name-outlet-Asx-Z9-y1U"/>
                 <outlet property="Preview" destination="1366" id="name-outlet-1366"/>
                 <outlet property="ProfilePicture" destination="1098" id="name-outlet-1098"/>
                 <outlet property="ReceiversCollection" destination="2611" id="name-outlet-2611"/>
                 <outlet property="ReplayButton" destination="15508" id="name-outlet-15508"/>
                 <outlet property="Spinner" destination="2216" id="name-outlet-2216"/>
                 <outlet property="Title" destination="1856" id="name-outlet-1856"/>
-                <outlet property="MoreButton" destination="Asx-Z9-y1U" id="name-outlet-Asx-Z9-y1U"/>
+                <outlet property="ObjectionableLabel" destination="24058" id="name-outlet-24058"/>
             </connections>
             <point key="canvasLocation" x="8.5" y="-69.5"/>
         </tableViewCell>
