--- a/Code/Mobile/TellMe.Mobile.iOS/Main.storyboard
+++ b/Code/Mobile/TellMe.Mobile.iOS/Main.storyboard
@@ -517,7 +517,7 @@
             </objects>
             <point key="canvasLocation" x="-1668" y="-997"/>
         </scene>
-        <!--Storytellers-->
+        <!--StoryTellers-->
         <scene sceneID="40588">
             <objects>
                 <viewController storyboardIdentifier="StorytellersController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="40589" customClass="StorytellersController" sceneMemberID="viewController">
@@ -529,14 +529,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" misplaced="YES" placeholder="Search for storytellers" translatesAutoresizingMaskIntoConstraints="NO" id="40597">
+                            <searchBar contentMode="redraw" misplaced="YES" placeholder="Search for StoryTellers" translatesAutoresizingMaskIntoConstraints="NO" id="40597">
                                 <rect key="frame" x="0.0" y="64" width="414" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="40606"/>
                                 </constraints>
                                 <textInputTraits key="textInputTraits" returnKeyType="search"/>
                                 <scopeButtonTitles>
-                                    <string>Storytellers</string>
+                                    <string>StoryTellers</string>
                                     <string>Tribes</string>
                                 </scopeButtonTitles>
                             </searchBar>
@@ -570,7 +570,7 @@
                             <constraint firstItem="40599" firstAttribute="bottom" secondItem="40617" secondAttribute="top" id="40616"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Storytellers" id="40595">
+                    <navigationItem key="navigationItem" title="StoryTellers" id="40595">
                         <barButtonItem key="rightBarButtonItem" image="AddGroup" id="40593">
                             <connections>
                                 <action selector="AddTribeButton_Activated:" destination="40589" id="40604"/>
@@ -600,11 +600,11 @@
             </objects>
             <point key="canvasLocation" x="-812" y="-204"/>
         </scene>
-        <!--Storytellers-->
+        <!--StoryTellers-->
         <scene sceneID="40783">
             <objects>
                 <navigationController id="40784" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Storytellers" image="Storytellers" id="41351"/>
+                    <tabBarItem key="tabBarItem" title="StoryTellers" image="Storytellers" id="41351"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="40786">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
