--- a/Code/Mobile/TellMe.Mobile.iOS/Story.storyboard
+++ b/Code/Mobile/TellMe.Mobile.iOS/Story.storyboard
@@ -165,7 +165,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Storyteller name, Username would like you to tell a story about:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="28958">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="StoryTeller name, Username would like you to tell a story about:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="28958">
                                 <rect key="frame" x="10" y="226.5" width="394" height="41"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -230,7 +230,7 @@
             </objects>
             <point key="canvasLocation" x="-3967" y="-315"/>
         </scene>
-        <!--Storyteller-->
+        <!--StoryTeller-->
         <scene sceneID="Bxc-Ma-bf4">
             <objects>
                 <tableViewController storyboardIdentifier="StorytellerViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="0wy-WT-jyn" customClass="StorytellerViewController" sceneMemberID="viewController">
